--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <main [@fadeAnimation]="o.isActivated ? o.activatedRoute : ''"> -->
   <router-outlet></router-outlet>
+  <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size = "large" color = "#fff" type = "timer" [fullScreen] = "true"></ngx-spinner>
 <!-- </main> -->
