--- a/src/app/pages/auth/forget-password/forget-password.component.html
+++ b/src/app/pages/auth/forget-password/forget-password.component.html
@@ -1,22 +1,21 @@
 <div class="nk-block-head">
   <div class="nk-block-head-content">
-      <h5 class="nk-block-title">Reset Password</h5>
-      <div class="nk-block-des">
-          <p>If you forgot your password, well, then we’ll email you instructions to reset your password.</p>
-      </div>
+    <h5 class="nk-block-title">Reset Password</h5>
+    <div class="nk-block-des">
+      <p>If you forgot your password, well, then we’ll email you instructions to reset your password.</p>
+    </div>
   </div>
 </div>
 
-<form >
+<form [formGroup]="forgetForm">
   <div class="form-group">
       <div class="form-label-group">
           <label class="form-label" for="default-01">Email</label>
-          <!-- <a class="link link-primary link-sm" href="#">Need Help?</a> -->
       </div>
-      <input type="text" class="form-control form-control-lg" id="default-01" placeholder="Enter your email address">
+      <input type="text" formControlName="email" class="form-control form-control-lg" placeholder="Enter your email address">
   </div>
   <div class="form-group">
-      <button class="btn btn-lg btn-primary btn-block">Send Reset Link</button>
+    <button type="submit" [disabled]="!forgetForm.valid" class="btn btn-lg btn-primary btn-block">Send Reset Link</button>
   </div>
 </form>
 
