--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -7,11 +7,11 @@
       </div>
   </div>
 </div><!-- .nk-block-head -->
-<form action="html/general/pages/auths/auth-success.html">
+<form [formGroup]="form" (submit)="handleFormSubmit()">
   <div class="form-group">
     <label class="form-label"><span>Account for</span></label>
     <div class="form-control-wrap">
-        <select class="form-control" >
+        <select class="form-control" formControlName="role">
             <option value="Patient">Patient</option>
             <option value="Pathology">Pathology</option>
             <option value="Doctor">Doctor</option>
@@ -20,35 +20,35 @@
 </div>
   <div class="form-group">
       <label class="form-label" for="name">Name</label>
-      <input type="text" class="form-control form-control-lg" id="name" placeholder="Enter your name">
+      <input type="text" class="form-control form-control-lg" formControlName="name" id="name" placeholder="Enter your name">
   </div>
   <div class="form-group">
-      <label class="form-label" for="email">Email or Username</label>
-      <input type="text" class="form-control form-control-lg" id="email" placeholder="Enter your email address or username">
+      <label class="form-label" for="email">Email</label>
+      <input type="text" class="form-control form-control-lg" formControlName="email" id="email" placeholder="Enter your email address.">
   </div>
   <div class="form-group">
     <div class="form-label-group">
       <label class="form-label" for="passcode">Passcode</label>
-      <a class="link link-primary link-sm" tabindex="-1" href="javascript::void(0)">Send Passcode to email address.</a>
+      <a class="link link-primary link-sm" (click)="sendPasscode()" href="javascript::void(0)">Send Passcode to email address.</a>
     </div>
       <div class="form-control-wrap">
           <a tabindex="-1" href="#" class="form-icon form-icon-right passcode-switch" data-target="password">
               <em class="passcode-icon icon-show icon ni ni-eye"></em>
               <em class="passcode-icon icon-hide icon ni ni-eye-off"></em>
           </a>
-          <input type="password" class="form-control form-control-lg" id="password" placeholder="Enter your passcode">
+          <input type="password" class="form-control form-control-lg" formControlName="passcode" id="password" placeholder="Enter your passcode">
       </div>
   </div>
   <div class="form-group">
       <div class="custom-control custom-control-xs custom-checkbox">
-          <input type="checkbox" class="custom-control-input" id="checkbox">
+          <input type="checkbox" formControlName="privacyPolicy" class="custom-control-input" id="checkbox">
           <label class="custom-control-label" for="checkbox">I agree to Health A Vision <a tabindex="-1" href="#">Privacy Policy</a> &amp; <a tabindex="-1" href="#"> Terms.</a></label>
       </div>
   </div>
   <div class="form-group">
-      <button class="btn btn-lg btn-primary btn-block">Register</button>
+      <button type="submit" [disabled]="!form.valid" class="btn btn-lg btn-primary btn-block">Register</button>
   </div>
-</form><!-- form -->
+</form>
 <div class="form-note-s2 pt-4"> Already have an account ? 
   <a routerLink='/auth/login'><strong>Sign in instead</strong></a>
 </div>
