--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="nk-footer">
   <div class="container wide-xl">
       <div class="nk-footer-wrap g-2">
-          <div class="nk-footer-copyright"> &copy; 2020 Health A Vision. Template by <a href="javascript:void(0);">Softnio</a>
+          <div class="nk-footer-copyright"> &copy; 2020 Health A Vision.
           </div>
           <div class="nk-footer-links">
               <ul class="nav nav-sm">
