--- a/src/app/pages/complete-registration/complete-registration.component.html
+++ b/src/app/pages/complete-registration/complete-registration.component.html
@@ -95,11 +95,10 @@
                       <div class="nk-content-body">
                           <div class="nk-content-wrap">
                               <div class="nk-block-head nk-block-head-lg wide-sm m-auto text-center">
-                                  <div class="nk-block-head-sub"><a href="support.html" class="text-soft"><span>Contact</span></a></div>
                                   <div class="nk-block-head-content">
-                                      <h2 class="nk-block-title fw-normal">How can we help?</h2>
+                                      <h2 class="nk-block-title fw-normal">Complete your profile</h2>
                                       <div class="nk-block-des">
-                                          <p>You can find all of the questions and answers abour secure your account</p>
+                                          <!-- <p>Enter your information to check </p> -->
                                       </div>
                                   </div>
                               </div><!-- .nk-block-head -->
